[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry]
name = "bananas"
version = "0.0.8"
description = ""
authors = ["Piotr Piwoński"]

[tool.poetry.dependencies]
python = "^3.7"
lark-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pre-commit = "^2.7.1"
